# uJSON

./: CMakeLists.txt  build.sh  install.sh  main.c  ujson.c  ujson.h  ujsonConfig.cmake.in
test/: CMakeLists.txt  install.sh  main  main.c  run-test.sh
